--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,17 @@ services:
                 - '-p${DB_PASSWORD}'
             retries: 3
             timeout: 5s
+    phpmyadmin:
+        image: phpmyadmin/phpmyadmin
+        container_name: sail-phpmyadmin
+        ports:
+            - 8081:80
+        environment:
+            PMA_HOST: mysql
+            PMA_PORT: 3306
+        depends_on:
+            - mysql
+
 networks:
     sail:
         driver: bridge
